--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-  <title>TAGjs - Home</title>
-  <link rel="stylesheet" type="text/css" href="../indexStyle.css">
+  <title>TAGjs - Documentation</title>
+  <link rel="stylesheet" type="text/css" href="../master.css">
+  <link rel="icon" type="image/png" href="../TAGjs/Favicon.png">
 </head>
 <body>
   <header>
@@ -12,9 +13,9 @@
         <li class="element">
           <a class="navlink" href="../index.html">Home</a></li>
         <li class="selected element">
-          <a class="navlink" href="../TAGMainSite/documentation.html">Docs</a></li>
+          <a class="navlink" href="../documentation/index.html">Docs</a></li>
         <li class="element">
-          <a class="navlink" href="../TAGMainSite/downloads.html">Downloads</a></li>
+          <a class="navlink" href="../downloads/index.html">Downloads</a></li>
         <li class="element">
           <a class="navlink" href="../TAGjs/Games/Combine/index.html">Combine Game</a></li>
         <li class ="element">
