Updated Home Description

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
   </header>
   <p id="outputBox">>Welcome to the TAGjs website! As of now, most of the information
-    here is forthcoming, but don't worry - the engine *does* work, and you can
-    play the demos.</p>
+    here is forthcoming, but don't worry - the text adventure game engine *does* work, and you can
+    play the demos. Click on one of the links in the navbar to get started.</p>
 </body>
 </html>
