Updated main page
The main page has recieved an update, and it now has the demos contained in a rollover button. The subpages have not yet recieved this update.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <h1 id="TAGHeading">TAGjs</h1>
     <p id="TAGSubtext">Text Adventures for the Web!</p>
     <nav class="navbar">
-      <ul id = "navlist">
-        <li class="selected element">
-          <a class="navlink" href="index.html">Home</a></li>
-        <li class="element">
-          <a class="navlink" href="documentation/index.html">Docs</a></li>
-        <li class="element">
-          <a class="navlink" href="downloads/index.html">Downloads</a></li>
-        <li class="element">
-          <a class="navlink" href="TAGjs/Games/Combine/index.html">Combine Game</a></li>
-        <li class ="element">
-          <a class="navlink" href="TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+      <ul class="navlist">
+        <li class="selected">
+          <a href="index.html">Home</a></li>
+        <li><a href="documentation/index.html">Docs</a></li>
+        <li><a href="downloads/index.html">Downloads</a></li>
+        <li><a>Demos</a>
+          <ul>
+            <li><a href="TAGjs/Games/Combine/index.html">Combine Game</a></li>
+            <li><a href="TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+          </ul>
+        </li>
       </ul>
+    </nav>
   </header>
   <p id="outputBox">>Welcome to the TAGjs website! As of now, most of the information
     here is forthcoming, but don't worry - the text adventure game engine *does* work, and you can
