--- a/documentation/index.html
+++ b/documentation/index.html
@@ -9,18 +9,18 @@
     <h1 id="TAGHeading">TAGjs</h1>
     <p id="TAGSubtext">Text Adventures for the Web!</p>
     <nav class="navbar">
-      <ul id = "navlist">
-        <li class="element">
-          <a class="navlink" href="../index.html">Home</a></li>
-        <li class="selected element">
-          <a class="navlink" href="../documentation/index.html">Docs</a></li>
-        <li class="element">
-          <a class="navlink" href="../downloads/index.html">Downloads</a></li>
-        <li class="element">
-          <a class="navlink" href="../TAGjs/Games/Combine/index.html">Combine Game</a></li>
-        <li class ="element">
-          <a class="navlink" href="../TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+      <ul class="navlist">
+        <li><a href="../index.html">Home</a></li>
+        <li class="selected"><a href="../documentation/index.html">Docs</a></li>
+        <li><a href="../downloads/index.html">Downloads</a></li>
+        <li><a>Demos</a>
+          <ul>
+            <li><a href="../TAGjs/Games/Combine/index.html">Combine Game</a></li>
+            <li><a href="../TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+          </ul>
+        </li>
       </ul>
+    </nav>
   </header>
   <p id="outputBox">>Proper documentation is a long way off, but when it is
   written, this is where it will be.</p>
