--- a/downloads.html
+++ b/downloads.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>TAGjs - Home</title>
+  <title>TAGjs - Downloads</title>
   <link rel="stylesheet" type="text/css" href="master.css">
   <link rel="icon" type="image/png" href="TAGjs/Favicon.png">
 </head>
@@ -9,9 +9,9 @@
     <img id="logo" src="Images/TAGjs logo.png"></img>
     <nav class="navbar">
       <ul class="navlist">
-        <li class="selected"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="docs.html">Docs</a></li>
-        <li><a href="downloads.html">Downloads</a></li>
+        <li class="selected"><a href="downloads.html">Downloads</a></li>
         <li><a href="demos.html">Demos</a>
           <ul>
             <li><a href="TAGjs/Games/Combine/index.html">Combine</a></li>
@@ -22,9 +22,10 @@
     </nav>
   </header>
   <div id="outputBox">
-    <p>>Welcome to the TAGjs website! <br>>As of now, most of the information
-      here is forthcoming, but don't worry - the text adventure game engine *does* work, and you can
-      play the demos. <br>>Click on one of the links in the navbar to get started.</p>
+    <p>
+      ><a href="https://github.com/harrisonfackrell/TAGjs">Github Repository</a>
+      <br>><a href="Fonts/Reformed Ellar.ttf" download>Reformed Ellar Font</a>
+    </p>
   </div>
   <footer>
     <p>TAGjs is a product of Harrison Fackrell, 2017. In accordance with the
