--- a/demos.html
+++ b/demos.html
@@ -9,10 +9,10 @@
     <img id="logo" src="Images/TAGjs logo.png"></img>
     <nav class="navbar">
       <ul class="navlist">
-        <li class="selected"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="docs.html">Docs</a></li>
         <li><a href="downloads.html">Downloads</a></li>
-        <li><a href="demos.html">Demos</a>
+        <li class="selected"><a href="demos.html">Demos</a>
           <ul>
             <li><a href="TAGjs/Games/Combine/index.html">Combine</a></li>
             <li><a href="TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
@@ -22,9 +22,13 @@
     </nav>
   </header>
   <div id="outputBox">
-    <p>>Welcome to the TAGjs website! <br>>As of now, most of the information
-      here is forthcoming, but don't worry - the text adventure game engine *does* work, and you can
-      play the demos. <br>>Click on one of the links in the navbar to get started.</p>
+    <p>>Excited to see what you can do with TAGjs?
+      <br/>>Click on one of these links to play a demo game!
+      <ul>
+        <li>><a href="TAGjs/Games/Combine/index.html">Combine</a></li>
+        <li>><a href="TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+      </ul>
+    </p>
   </div>
   <footer>
     <p>TAGjs is a product of Harrison Fackrell, 2017. In accordance with the
