--- a/TAGjs/Games/The Road Not Taken/index.html
+++ b/TAGjs/Games/The Road Not Taken/index.html
@@ -24,7 +24,10 @@
     <input type="text" id="inputBox">
   </div>
   <footer>
-    <p>This game was made with TAG.js - <a href="https://goo.gl/fFmS3g" download>Make your own</a>!</p>
+    <p>This game was made with TAG.js -
+      <a href="https://harrisonfackrell.github.io/TAGjs/index.html">
+      Make your own</a>!
+    </p>
   </footer>
 </body>
 </html>
