Christmas game update
+Can no longer head to the nonexistant north pole.

--- a/demos.html
+++ b/demos.html
@@ -27,6 +27,7 @@
       <ul>
         <li>><a href="TAGjs/Games/Combine/index.html">Combine</a></li>
         <li>><a href="TAGjs/Games/Explorable%20NUAMES/index.html">Explorable NUAMES</a></li>
+        <li>><a href="TAGjs/Games/Christmas/index.html">Christmas Adventure</a></li>
       </ul>
     </p>
   </div>
