--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -26,7 +26,7 @@
   <footer>
     <p>This game was made with TAG.js -
       <a href="https://harrisonfackrell.github.io/TAGjs/index.html">
-      Make your own</a>!
+      Visit the home page</a>!
     </p>
   </footer>
 </body>
