--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -5,7 +5,7 @@
   <script src="../../TAG.js" defer></script>
   <script src="game.js" defer></script>
   <link rel="icon" type="image/png" href="../../Favicon.png">
-  <title>Text Adventure</title>
+  <title>Christmas Adventure!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
