--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -19,7 +19,7 @@
     <audio id="music" src=""autoplay loop></audio>
     <audio id="sound"></audio>
   </div>
-  <p id="outputBox"></p>
+  <div id="outputBox"></div>
   <div id="inputBackground">
     <input type="text" id="inputBox">
   </div>
