--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -21,7 +21,7 @@
   </div>
   <div id="outputBox"></div>
   <div id="inputBackground">
-    <input type="text" id="inputBox">
+    <input type="text" maxlength = "150" id="inputBox">
   </div>
   <footer>
     <p>This game was made with TAG.js -
