--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -14,9 +14,11 @@
     <image id="imageDisplay"></image>
   </header>
   <div id="audio">
-    <p>Music:<img id="musicControls" src="../../Sound.png"><img>
-      Sound:<img id="soundControls" src="../../Sound.png"></p>
-    <audio id="music" src=""autoplay loop></audio>
+    <p id="soundControls">Sound:<img id="soundButton" src="../../Sound.png">
+      </img></p>
+    <p id="musicControls">Music:<img id="musicButton" src="../../Sound.png">
+      </img></p>
+    <audio id="music" src="" autoplay loop></audio>
     <audio id="sound"></audio>
   </div>
   <div id="outputBox"></div>
