--- a/TAGjs/Games/Combine/index.html
+++ b/TAGjs/Games/Combine/index.html
@@ -14,14 +14,16 @@
     <image id="imageDisplay"></image>
   </header>
   <div id="audio">
-    <p>Music:<img id="musicControls" src="../../Sound.png"><img>
-      Sound:<img id="soundControls" src="../../Sound.png"></p>
-    <audio id="music" src=""autoplay loop></audio>
+    <p id="soundControls">Sound:<img id="soundButton" src="../../Sound.png">
+      </img></p>
+    <p id="musicControls">Music:<img id="musicButton" src="../../Sound.png">
+      </img></p>
+    <audio id="music" src="" autoplay loop></audio>
     <audio id="sound"></audio>
   </div>
-  <p id="outputBox"></p>
+  <div id="outputBox"></div>
   <div id="inputBackground">
-    <input type="text" id="inputBox">
+    <input type="text" maxlength = "150" id="inputBox">
   </div>
   <footer>
     <p>This game was made with TAG.js -
