--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../TAG.css">
   <link rel="stylesheet" type="text/css" href="override.css">
-  <script src="../../TAG3.js" defer></script>
+  <script src="../../TAG.js" defer></script>
   <script src="game.js" defer></script>
   <link rel="icon" type="image/png" href="../../Favicon.png">
   <title>Christmas Adventure!</title>
