--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
   <header id="roomDisplay">
-    <p id="roomNameDisplay"></p>
+    <p id="roomNameDisplay">Christmas Adventure!</p>
     <image id="imageDisplay"></image>
   </header>
-  <div id="audio">
-    <p id="soundControls">Sound:<img id="soundButton" src="../../Sound.png">
-      </img></p>
-    <p id="musicControls">Music:<img id="musicButton" src="../../Sound.png">
-      </img></p>
-    <audio id="music" src="" autoplay loop></audio>
-    <audio id="sound"></audio>
+  <div id="outputBox">
+    <p>> This game is a first-person text-adventure game. To play, simply type
+      commands into the box below. If you want to put on your coat, for example,
+      you can type, "Put on coat." If you are having trouble doing something,
+      try phrasing it differently. If you feel like the game isn't letting you
+      do something that you want to, consider sending a feature suggestion to
+      harrisonfackrell at mail.weber.edu.
+  </p>
   </div>
-  <div id="outputBox"></div>
   <div id="inputBackground">
-    <input type="text" maxlength = "150" id="inputBox">
+    <input type="text" maxlength = "150" id="inputBox" value="Click the Input Field to Start">
   </div>
   <footer>
     <p>This game was made with TAG.js -
