--- a/TAGjs/Games/Christmas/index.html
+++ b/TAGjs/Games/Christmas/index.html
@@ -11,7 +11,7 @@
 <body>
   <header id="roomDisplay">
     <p id="roomNameDisplay">Christmas Adventure!</p>
-    <image id="imageDisplay"></image>
+    <div id="imageDisplay"></img></div>
   </header>
   <div id="outputBox">
     <p>> This game is a first-person text-adventure game. To play, simply type
